# nzambe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.env  generate-lambda-s3-indexer-req.sh  pyproject.toml
.github/workflows/: build-lambda.yml  build.yml  ci.yml  deploy.yml  terraform-ci.yml  uv-lock-check.yml
config/: base.yaml  prod.yaml  staging.yaml  test.yaml
lambda/s3-indexer/: Dockerfile  docker-compose.yml  handler.py  requirements.txt
src/nzambe/: __init__.py  cli.py  config.py  constants.py  utils.py
src/nzambe/client/: cli.py  helpers.py
src/nzambe/helpers/: bulk_queries.py  client.py  data_processing.py  eval.py  llm.py  observability.py
src/nzambe/server/: server.py
terraform/: README.md  specs.md
terraform/envs/prod/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf
terraform/envs/staging/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/global/: main.tf  outputs.tf  terraform.tf  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_indexer/: main.tf  outputs.tf  variables.tf
terraform/modules/langfuse/: LANGFUSE_DEPLOYMENT_GUIDE.md  README.md  ecs.tf  main.tf  outputs.tf  secrets.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  lambda_test_handler.py  test_lambda_handler.py
tests/data/: bible_text_sample.txt  qa_dataset.json
tests/helpers/: test_client.py  test_data_processing.py  test_eval.py
