[project]
name = "nzambe"
dynamic = ["version"]
description = "Application for Q&A on holy books"
readme = "README.md"
authors = [
    { name = "Arnaud YANKWA WANDJI", email = "yankwarmand@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "langchain-ollama>=1.0.1",
    "langfuse>=3.10.3",
    "llama-index>=0.14.8",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-ollama>=0.9.0",
    "openinference-instrumentation-llama-index>=4.3.9",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "ragas>=0.3.9",
]

[project.scripts]
nzambe = "nzambe.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/nzambe/_version.py"

[dependency-groups]
dev = [
    "notebook>=7.5.0"
]
lint = [
    "ruff>=0.14.4",
    "pre-commit>=4.5.0",
]
test = [
    "pytest>=9.0.1",
]
