[project]
name = "nzambe"
version = "0.0.0" # the real dynamic version will be defined inside the src/__version.py file
description = "Application for Q&A on holy books"
readme = "README.md"
authors = [
    { name = "Arnaud YANKWA WANDJI", email = "yankwarmand@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "langchain-ollama>=1.0.1",
    "langfuse>=3.10.3",
    "litellm>=1.81.1",
    "llama-index>=0.14.8",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-ollama>=0.9.0",
    "openinference-instrumentation-llama-index>=4.3.9",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "ragas>=0.3.9",
    "transformers>=4.57.6",
]

[project.scripts]
nzambe = "nzambe.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "llama-index-embeddings-huggingface>=0.6.1",
    "notebook>=7.5.0",
]
lint = [
    "ruff>=0.14.4",
    "pre-commit>=4.5.0",
    "ty>=0.0.1a29",
]
test = [
    "pytest>=9.0.1",
]
